daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus-daemonset
spec:
  selector:
    matchLabels:
      tier: monitoring
      name: prometheus-exporter
  template:
    metadata: 
      labels:
        tier: monitoring
        name: prometheus-exporter
    spec:
      containers:
      - name: prometheusprom
        image: prom/node-exporter
        ports:
        - containerPort: 80
