deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    app: app-v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata: 
      labels:
        app: app-v1
    spec:
      containers:
      - name: sample-ctr
        image: devopstrainer/deploy:v1
        ports:
        - containerPort: 80
