pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    zone: prod
    version: v2
spec:
  containers:
  - name: sample-contr
    image: devopstrainer/deploy:v1
    ports:
    - containerPort: 80
