canary-svc1.yml
apiVersion: v1
kind: Service
metadata: 
  name: svc1
  labels:
    app: app-v1
spec:
  selector:
    zone: prod
  ports:
  - port: 80
    nodePort: 32001
    protocol: TCP
  type: NodePort
