svc1-loadbalacer.yml
apiVersion: v1
kind: Service
metadata: 
  name: svc1
  labels:
    app: app-v1
spec:
  selector:
    app: app-v1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
